# aos

./: .gitignore  Makefile  README.md  link.ld  log.txt  mmap.txt  mmap2.txt  mmap3.txt  pages.txt
boot/: Cargo.toml  Makefile
boot/src/: main.rs
kernel/: Cargo.toml  Makefile  kstart.s  link.ld  start.s
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  alloc.rs  lib.rs  main.rs  mem.rs  memory.rs  video.rs
kernel/src/acpi/: mapper.rs  pci.rs  tables.rs
kernel/src/drivers/: keyboard.rs  video.rs
kernel/src/drivers/video/: printer.rs
kernel/src/input/: keyboard.rs  mod.rs
kernel/src/video/: fonts.rs  framebuffer.rs  mod.rs  printer.rs
