[package]
name = "boot"
version = "0.1.0"
edition = "2021"

[lints.rust]
unreachable_code = { level = "allow" }

[dependencies]
uefi = { version = "0.34.1", features = ["panic_handler", "alloc", "global_allocator"] }
elf = { version = "0.7.4", default-features = false, features = ["nightly"] }
x86_64 = "0.15.2"
anyhow = { version = "1.0.95", default-features = false }
