[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lints.rust]
unused_must_use = { level = "forbid" }
static_mut_refs = { level = "allow" }

[dependencies]
rusttype = { version = "0.9.3", default-features = false, features = ["libm-math"] }
pc-keyboard = "0.8.0"
x86_64 = "0.15.2"
acpi = "5.1.0"
anyhow = { version = "1.0.95", default-features = false }
